Agregando ventana de estadisticas enfermedades

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@
 /Graficos/
 /Reporte.txt
 /misVacunas.dat
+/misPersonas.dat
+/misPacientes.dat
+/misEnfermedades.dat
+/misConsultas.dat
+/misCitas.dat
+/402-2576879-1.txt
+/402-2566848-8.txt
